Доработать логику эвентов, убрать заглушки